# smtcgo

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  conanfile.txt  env.ps1
.github/workflows/: cmake.yml
app/: complete_ring_process.cpp  skeleton_compare.cpp  test_check_roadblock.cpp  test_check_targetboard.cpp  test_get_start_point.cpp  test_hello.cpp  test_ring.cpp  test_status_switcher.cpp
include/: skeleton.h  video_skeleton_process.h
include/find_line_lib/: calculate_wheel_speeds.h  check_road_element.h  check_roadblock.h  common.h  find_line_lib.h  get_start_point.h  hello.h  ring.h  skeleton.h  status_switcher.h  targetboard.h
src/: main.cpp  video_skeleton_process.cpp
src/find_line_lib/: calculate_wheel_speeds.cpp  check_road_element.cpp  check_roadblock.cpp  get_start_point.cpp  hello.cpp  ring.cpp  skeleton.cpp  status_switcher.cpp  targetboard.cpp
